--- a/guitarcase.html
+++ b/guitarcase.html
@@ -71,6 +71,7 @@
                         <div class="outer-line-bottom"> 
                         </div>
                         <h4 class="font-white">I designed this guitar case with All-State Industries for Gibson USA as a viable new option to replace their current hardwood cases. This case features an innovative flush-mounted handle, and a removable accessories box with a lid that folds up to support the neck of the guitar in the case during maintenance.</h4>
+                        <h4>I worked with a group of engineers and salespeople at All-State and a group of manufacturing engineers at K2 Plastics to develop the case. I contributed design direction, engineering, and the final CAD models used for the production of a full-scale prototype.</h4>
                     </div>
                 </div>  
             </div>
@@ -144,7 +145,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 font-white center" style="margin-bottom: -15px">
-                        <h2 class="font-white"><a href="shoes.html">GUITAR CASE | 2013</a></h2>
+                        <h2 class="font-white"><a href="guitarcase.html">GUITAR CASE | 2013</a></h2>
                     </div>
                 </div>  
             </div>
@@ -158,7 +159,7 @@
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 font-green left">
                         <h2 class="headline">other work</h2>
-                        <span class="font-blue font-bold"><h4>A collection of recent projects from school and work.</h4></span>
+                        <span class="font-gray font-bold"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -228,7 +229,7 @@
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
                         <h1 class="headline padded-bottom">contact</h1>
-                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
+                        <span class="font-white"><h4>I love what I do. If you'd like to learn more about me or any of my work, please get in touch.</h4></span>
                     </div>
                 </div>
             <div class="row">
