--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         <h2 class="headline">about</h2>
                         <h4 class="font-gray left">My name is Brandon Williams and I am a hybrid Engineer/Designer. I fell in love with designing and building things at a young age. Growing up on a farm and around a manufacturing plant, I became fascinated with how things worked and were made.</h4>
                         <h4 class="font-gray left">This passion of building and manufacturing led me to Northwestern University where I received a B.S. in Mechanical Engineering in 2013. While studying engineering, I discovered that my favorite classes all involved the human-centered side of design and engineering.</h4>
-                        <h4 class="font-gray left">I am now currently pursuing a Master's of Science in Engineering Design Innovation at Northwestern University. EDI pairs my technical background with a Human-Centered Design focus.</h4>
-                        <h4 class="font-blue">This combination allows me to design with the end in mind, understanding how design decisions affect manufacturing. </h4>
+                        <h4 class="font-gray left">I am now currently pursuing a <a href="http://segal.northwestern.edu/programs/graduate/engineering-design-innovation" >Master's of Science in Engineering Design Innovation</a> at Northwestern University. EDI pairs my technical background with a Human-Centered Design focus. Our coursework includes: design research, product, interaction, and service design, design strategy, and communication design. </h4>
+                        <h4 class="font-black left">The combination of a technical background and a human-centered design focused Masters program allows me to design from a whole-brained perspective. This gives me an understanding of the value chain and the opportunity to create true meaning for the stakeholders involved. </h4>
                     </div>
                 </div>
                 <!--<div class="row">
@@ -122,7 +122,7 @@
                         <a href="pandg.html"><img class="img-responsive" src="img/findneeds.jpg"></a>
                         <h2 class="font-blue">RESEARCH</h2>
                             
-                        <h4 class="font-gray">Every project begins with a problem. Whether or not the stated problem is the right problem is often an interesting challenge. It takes time and effort to truly understand the actual needs of the user.</h4>
+                        <h4 class="font-gray">Every project begins with a problem. Whether or not the stated problem is the right problem is often an interesting challenge. It takes time and effort to truly understand the actual needs of the user and build empathy for those needs.</h4>
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-6 left font-blue">
@@ -170,7 +170,7 @@
                         <a href="guitarcase.html"><img class="img-responsive" src="img/guitarmold.jpg"></a>
                         <h2 class="font-blue">ENGINEERING</h2>
                             
-                        <h4 class="font-gray">I've never been satisfied with only rough prototypes of potential products. To me, there is something satisfying in the ability to bring the actual product to life. Although not all of my work gets manufactured, I always try to design products that have the potential to be made.</h4>
+                        <h4 class="font-gray">I've never been satisfied with only rough prototypes of potential products. To me, there is something satisfying in the ability to bring the actual product to life. Although not all of my work gets manufactured, I always try to design products with the potential to be made.</h4>
                     </div>
                 </div>
             </div>
@@ -184,7 +184,7 @@
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 col-sm-6 font-blue left">
                         <h1 class="headline">work</h1>
-                        <span class="font-blue"><h4>A collection of recent projects from school and work.</h4></span>
+                        <span class="font-gray"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div> 
                 <div class="row padded-bottom-35">
@@ -351,22 +351,28 @@
                         <h2>TOOLS</h2>
                     </div> 
                 </div>
-                <div class="row padded-bottom-100 font-blue">
-                    <div class="col-xs-6 col-sm-3 col-md-3 left">
+                <div class="row font-blue">
+                    <div class="col-xs-6 col-sm-4 col-md-4 left">
                         <h4>Research</h4>
-                        <h4 class="font-normal font-gray">Ethnographic Research<br>User Observations<br>Framework Development<br>Personas<br>Mood Boards<br></h4>
+                        <h4 class="font-normal font-gray">Ethnographic Research<br>Intercept Interviews<br>Focus Group Analysis<br>Secondary Research</h4>
                     </div>
-                    <div class="col-xs-6 col-sm-3 col-md-3 left">
+                    <div class="col-xs-6 col-sm-4 col-md-4 left">
+                        <h4>Synthesis</h4>
+                        <h4 class="font-normal font-gray">Framework Development<br>Personas<br>Mood Boards<br>Insight Generation</h4>
+                    </div>
+                    <div class="col-xs-6 col-sm-4 col-md-4 left">
                         <h4>Ideation</h4>
                         <h4 class="font-normal font-gray">Sketching<br>Mockup Building<br>Adobe Photoshop<br>Adobe Illustrator<br>Wireframing<br></h4>
                     </div>
-                    <div class="col-xs-6 col-sm-3 col-md-3 left">
+                </div>
+                <div class="row padded-bottom-100">
+                    <div class="col-xs-6 col-sm-4 col-md-4 left">
                         <h4>Prototyping</h4>
-                        <h4 class="font-normal font-gray">SolidWorks Modeling<br>Foam Core Modeling<br>Wood-working<br>Metal-working<br>3d Printing<br></h4>
+                        <h4 class="font-normal font-gray">SolidWorks Modeling<br>Foam Core Modeling<br>Wood-working<br>Metal-working<br>3d Printing<br>Sewing</h4>
                     </div>
-                    <div class="col-xs-6 col-sm-3 col-md-3 left">
+                    <div class="col-xs-6 col-sm-4 col-md-4 left">
                         <h4>Engineering</h4>
-                        <h4 class="font-normal font-gray">Design for Manufacturing<br>Plastic Injection Molding<br>Vacuum Forming<br>Mold-making<br>CAD/CAM</h4>
+                        <h4 class="font-normal font-gray">Design for Manufacturing<br>Plastic Injection Molding<br>Vacuum Forming<br>Mold-making<br>CAD/CAM<br>Material Selection<br></h4>
                     </div>
                 </div>
                 <div class="row">
