--- a/loungechair.html
+++ b/loungechair.html
@@ -70,7 +70,7 @@
                             </div>
                         <div class="outer-line-bottom"> 
                         </div>
-                        <h4 class="font-white">This lounge chair was designed as part of a course at Northwestern University. I wanted to design it using beautiful, natural materials that will age gracefully. As the chair becomes well used and worn in, the materials will become more and more beautiful. I was also interested in pushing the boundaries with unexpected wood forms. </h4>
+                        <h4 class="font-white">This lounge chair was designed as part of Industrial Design coursework at Northwestern University. I chose to design a chair that was modern in design but different from what currently exists. I wanted to design a chair that utilized beautiful, natural materials that age gracefully. As the chair becomes well used and worn in, the chosen materials will become more and more beautiful. I was also interested in pushing the boundaries with unexpected wood forms.</h4>
                     </div>
                 </div>  
             </div>
@@ -163,7 +163,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 font-white center" style="margin-bottom: -15px">
-                        <h2 class="font-white"><a href="shoes.html">LOUNGE CHAIR | 2013</a></h2>
+                        <h2 class="font-white"><a href="loungechair.html">LOUNGE CHAIR | 2013</a></h2>
                     </div>
                 </div>  
             </div>
@@ -177,7 +177,7 @@
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 font-green left">
                         <h2 class="headline" style="font-weight: 700">other work</h2>
-                        <span class="font-blue font-bold"><h4>A collection of recent projects from school and work.</h4></span>
+                        <span class="font-gray font-bold"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -247,7 +247,7 @@
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
                         <h1 class="headline padded-bottom">contact</h1>
-                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
+                        <span class="font-white"><h4>I love what I do. If you'd like to learn more about me or any of my work, please get in touch.</h4></span>
                     </div>
                 </div>
             <div class="row">
