--- a/pandg.html
+++ b/pandg.html
@@ -70,8 +70,8 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div>   
-                        <h4 class="font-white">Our project team worked with Procter and Gamble as part of our Human Centered Design Studio course. We began the process with a broad direction involving redesigned packaging of an existing product. We conducted in-home interviews with a panel of consumers to observe their behaviors.</h4>
-                        <h4>The interviews were then distilled into useful observations and insights that drove the development of our product. We tested our product with the panel of consumers frequently over the course of the work gaining feedback and direction.</h4>
+                        <h4 class="font-white">Our project team worked with Procter and Gamble as part of our Human Centered Design Studio coursework in product design. The team consisted three EDI students including myself. We began the process with a broad direction involving redesigned packaging of an existing product. We conducted in-home interviews with a panel of consumers to observe their behaviors.</h4>
+                        <h4>The interviews were then distilled into useful observations and insights that drove the development of our product. We tested our product with the panel of consumers frequently over the course of the work gaining feedback and direction. I contributed mechanical design and industrial design direction to the project as well as prototyping and CAD modeling.</h4>
                         <h4>The project is currently under NDA and therefore visuals are unavailable.</h4>
                     </div>
                 </div>  
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 font-white center" style="margin-bottom: -15px">
-                        <h2 class="font-white"><a href="shoes.html">P&amp;G | 2013</a></h2>
+                        <h2 class="font-white"><a href="pandg.html">P&amp;G | 2013</a></h2>
                     </div>
                 </div>  
             </div>
@@ -117,7 +117,7 @@
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 font-green left">
                         <h2 class="headline" style="font-weight: 700">other work</h2>
-                        <span class="font-blue font-bold"><h4>A collection of recent projects from school and work.</h4></span>
+                        <span class="font-gray font-bold"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -187,7 +187,7 @@
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
                         <h1 class="headline padded-bottom">contact</h1>
-                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
+                        <span class="font-white"><h4>I love what I do. If you'd like to learn more about me or any of my work, please get in touch.</h4></span>
                     </div>
                 </div>
             <div class="row">
