--- a/samsung.html
+++ b/samsung.html
@@ -71,7 +71,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div>   
-                        <h4 class="font-white">I worked as part of a team with Samsung to research and develop a next-generation interface design. The work spanned two different courses; the first was a Design Research course and the second was the Human Centered Design Studio course.</h4>
+                        <h4 class="font-white">I worked as part of a team with Samsung to research and develop a next-generation interface design. The work spanned two different courses; the first was a Design Research course and the second was a Human Centered Design Studio course in interaction design.</h4>
                         <h4>During the research phase, we conducted analogous research of a similar topic to our project first looking for overall themes to emerge. We then conducted in-home user interviews with people who had experienced the issue we were studying for Samsung. Our class worked in individual teams on the same problem, and we were able to synthesize key insights and directions that drove the design portion of the project.</h4>
                         <h4>In the design studio portion of the course, we took our insights and built them into actual design directions. We prototyped our interaction designs in a number of media including paper sketches and internet-based wireframes. We constantly tested our ideas with users to gain feedback and iterate our designs.</h4>
                         <h4>The project is currently under NDA and therefore visuals are unavailable.</h4>
@@ -105,7 +105,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 font-white center" style="margin-bottom: -15px">
-                        <h2 class="font-white"><a href="shoes.html">SAMSUNG | 2013</a></h2>
+                        <h2 class="font-white"><a href="samsung.html">SAMSUNG | 2013</a></h2>
                     </div>
                 </div>  
             </div>
@@ -119,7 +119,7 @@
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 font-green left">
                         <h2 class="headline" style="font-weight: 700">other work</h2>
-                        <span class="font-blue font-bold"><h4>A collection of recent projects from school and work.</h4></span>
+                        <span class="font-gray font-bold"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -189,7 +189,7 @@
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
                         <h1 class="headline padded-bottom">contact</h1>
-                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
+                        <span class="font-white"><h4>I love what I do. If you'd like to learn more about me or any of my work, please get in touch.</h4></span>
                     </div>
                 </div>
             <div class="row">
