--- a/shoes.html
+++ b/shoes.html
@@ -70,7 +70,8 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div>   
-                        <h4 class="font-white">I designed these shoes as part of a course at Northwestern University. After looking at the types of hybrid dress shoes currently on the market, I wanted to further blur the lines between dressy and casual footwear by using a less traditional form and a high performance athletic sole. I identified a target consumer and designed a hybrid shoe to fit their lifestyle.</h4>
+                        <h4 class="font-white">I designed these shoes as part of Industrial Design coursework at Northwestern University. After looking at the types of hybrid dress shoes currently on the market, I wanted to further blur the lines between dressy and casual footwear by using a less traditional form and a high performance athletic sole. I identified a target consumer and designed a hybrid shoe to fit their lifestyle.</h4>
+                        <h4>The final design features a modern upper design in a more traditional leather material. The white stitching accent adds some fine detail to the design. The sole is modeled after current trends in athletic footwear and features a vibrant color which pairs nicely with the traditional brown leather.</h4>
                     </div>
                 </div>  
             </div>
@@ -146,7 +147,7 @@
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 font-green left">
                         <h2 class="headline">other work</h2>
-                        <span class="font-blue font-bold"><h4>A collection of recent projects from school and work.</h4></span>
+                        <span class="font-gray font-bold"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -173,7 +174,7 @@
                         <div class="pad-space">
                     </div> 
                 </div>   
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
                         <input type="button" value="speaker | 2013" class="btn btn-blue-work" onclick="location.href='speaker.html';">
@@ -216,7 +217,7 @@
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
                         <h1 class="headline padded-bottom">contact</h1>
-                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
+                        <span class="font-white"><h4>I love what I do. If you'd like to learn more about me or any of my work, please get in touch.</h4></span>
                     </div>
                 </div>
             <div class="row">
