--- a/speaker.html
+++ b/speaker.html
@@ -70,8 +70,7 @@
                             </div>
                         <div class="outer-line-bottom"> 
                         </div>
-                        <h4 class="font-white">This wireless speaker was designed as part of a course at Northwestern University. It features an iconic shape with high quality materials and finishes. I wanted to explore the possibilities of using wood in shapes not normally seen.</h4>
-                        <h4>
+                        <h4 class="font-white">This wireless speaker was designed as part of Industrial Design coursework at Northwestern University. After surveying the current marketplace of portable speakers, I wanted to create something that was small, but featured premium materials and an iconic shape.</h4>
                     </div>
                 </div>
             </div>  
@@ -112,19 +111,13 @@
                     </div>  
                 </div>
                 <div class="row padded-bottom-35">
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <img class="img-responsive" src="img/speakerpage20.jpg">
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/speakerpage6.jpg">
                     </div>  
                 </div>
                 <div class="row padded-bottom-35">
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <img class="img-responsive" src="img/speakermodel1.jpg">
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <img class="img-responsive" src="img/speakermodel2.jpg">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/speakerpage20.jpg">
                     </div>
                 </div>
                 <div class="row">
@@ -142,7 +135,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 font-white center" style="margin-bottom: -15px">
-                        <h2 class="font-white"><a href="shoes.html">SPEAKER | 2013</a></h2>
+                        <h2 class="font-white"><a href="speaker.html">SPEAKER | 2013</a></h2>
                     </div>
                 </div>  
             </div>
@@ -226,7 +219,7 @@
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
                         <h1 class="headline padded-bottom">contact</h1>
-                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
+                        <span class="font-white"><h4>I love what I do. If you'd like to learn more about me or any of my work, please get in touch.</h4></span>
                     </div>
                 </div>
             <div class="row">
