--- a/bootcamp.html
+++ b/bootcamp.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="col-md-7 col-sm-7 font-white left">
                         <h1 class="headline">clifford | 2013</h1> 
-                        <h2 class="font-white">Clifford is an Arduino-controlled, guitar-playing machine. It was developed as part of a three-week project based solely on the prompt "Kinetic Art" and a $100 budget. It was the first project for Northwestern University's Engineering Design Innovation Master's Program.</h2>
+                        <h4 class="font-white">Clifford is an Arduino-controlled, guitar-playing machine. It was developed as part of a three-week project based solely on the prompt "Kinetic Art" and a $100 budget. It was my first project for Northwestern University's Engineering Design Innovation Master's Program.</h4>
                     </div>
                 </div>  
             </div>
@@ -177,7 +177,7 @@
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 font-green left">
                         <h1 class="headline" style="font-weight: 700">other work</h1>
-                        <span class="font-blue"><h4>A collection of recent projects from school and work.</h4></span>
+                        <span class="font-gray"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -247,7 +247,7 @@
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
                         <h1 class="headline padded-bottom">contact</h1>
-                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
+                        <span class="font-white"><h4>I love what I do. If you'd like to learn more about me or any of my work, please get in touch.</h4></span>
                     </div>
                 </div>
             <div class="row">
