--- a/hospira.html
+++ b/hospira.html
@@ -70,7 +70,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div>   
-                        <h4 class="font-white">I worked at Hospira as part of an intern design team over the summer of 2013. As a team, we worked to make changes to an existing product by understanding numerous key stakeholders. In order to do this, we had to conduct numerous interviews with the parties that were involved.</h4>
+                        <h4 class="font-white">I worked at Hospira as part of a diverse intern design team consisting of three biomedical engineers, a mechanical engineer, and an aerospace engineer. We collaborated with numerous members of the Hospira team in the engineering, manufacturing, marketing, and law departments. As a team, we worked to make changes to an existing product by understanding numerous key stakeholders. In order to do this, we had to conduct numerous interviews with the parties that were involved.</h4>
                         <h4>After identifying key stakeholder needs, we were able to incorporate appropriate design changes within the constraints of the current manufacturing process a price structure. We presented our solutions using CAD renderings and 3D-printed prototypes.</h4>
                         <h4>The project is currently under NDA and therefore visuals are unavailable.</h4>
                     </div>
@@ -103,7 +103,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 font-white center" style="margin-bottom: -15px">
-                        <h2 class="font-white"><a href="shoes.html">HOSPIRA | 2013</a></h2>
+                        <h2 class="font-white"><a href="hospira.html">HOSPIRA | 2013</a></h2>
                     </div>
                 </div>  
             </div>
@@ -117,7 +117,7 @@
                 <div class="row padded-bottom-25">
                     <div class="col-md-6 font-green left">
                         <h2 class="headline" style="font-weight: 700">other work</h2>
-                        <span class="font-blue font-bold"><h4>A collection of recent projects from school and work.</h4></span>
+                        <span class="font-gray font-bold"><h4>A collection of recent projects from school and work.</h4></span>
                     </div>
                 </div>
                 <div class="row padded-bottom-35">
@@ -187,7 +187,7 @@
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
                         <h1 class="headline padded-bottom">contact</h1>
-                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
+                        <span class="font-white"><h4>I love what I do. If you'd like to learn more about me or any of my work, please get in touch.</h4></span>
                     </div>
                 </div>
             <div class="row">
