--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-6 left font-blue">
-                        <a href="guitarcase.html"><img class="img-responsive" src="img/guitarmold.jpg"></a>
+                        <a href="guitarcase.html"><img class="img-responsive" src="img/guitarmold.JPG"></a>
                         <h2 class="font-blue">ENGINEERING</h2>
                             
                         <h4 class="font-gray">I've never been satisfied with only rough prototypes of potential products. To me, there is something satisfying in the ability to bring the actual product to life. Although not all of my work gets manufactured, I always try to design products with the potential to be made.</h4>
