--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 <div class="row padded-bottom-100">
                     <div class="col-xs-6 col-sm-4 col-md-4 left">
                         <h4>Prototyping</h4>
-                        <h4 class="font-normal font-gray">SolidWorks Modeling<br>Foam Core Modeling<br>Wood-working<br>Metal-working<br>3d Printing<br>Sewing</h4>
+                        <h4 class="font-normal font-gray">SolidWorks Modeling<br>Foam Core Modeling<br>Wood-working<br>Metal-working<br>3d Printing<br>Sewing<br>HTML5<br>CSS3</h4>
                     </div>
                     <div class="col-xs-6 col-sm-4 col-md-4 left">
                         <h4>Engineering</h4>
