--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="outer-fit-white bg-white" id="About">
         <div class="inner-fit-about">
             <div class="container">
-                <div class="row left padded-bottom-35">
+                <div class="row left padded-bottom-55">
                     <div class="col-md-6 col-sm-6 font-white"> 
                         <img class="img-responsive no-shadow" src="img/bwstudio.png">
                     </div>
@@ -391,7 +391,7 @@
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 font-white left">
                         <h1 class="headline padded-bottom">contact</h1>
-                        <span class="font-white"><h4>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h4></span>
+                        <span class="font-white"><h4>I love what I do. If you'd like to learn more about me or any of my work, please get in touch.</h4></span>
                     </div>
                 </div>
             <div class="row">
