--- a/pandg.html
+++ b/pandg.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-7 col-sm-7 font-white left">
-                        <h1 class="headline">shoes | 2013</h1>
+                        <h1 class="headline">Procter &amp; Gamble | 2013</h1>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
