--- a/pandg.html
+++ b/pandg.html
@@ -70,9 +70,9 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div>   
-                        <h4 class="font-white">Our project team worked with Procter and Gamble as part of our Human Centered Design Studio coursework in product design. The team consisted three EDI students including myself. We began the process with a broad direction involving redesigned packaging of an existing product. We conducted in-home interviews with a panel of consumers to observe their behaviors.</h4>
-                        <h4>The interviews were then distilled into useful observations and insights that drove the development of our product. We tested our product with the panel of consumers frequently over the course of the work gaining feedback and direction. I contributed mechanical design and industrial design direction to the project as well as prototyping and CAD modeling.</h4>
-                        <h4>The project is currently under NDA and therefore visuals are unavailable.</h4>
+                        <h4 class="font-white">Our project team worked with Procter and Gamble as part of our Human Centered Design Studio coursework in product design. The team consisted three EDI students including myself. We began the process with a broad direction involving redesigned packaging of an existing product. We conducted in-home interviews with a panel of consumers to observe their behaviors in context.</h4>
+                        <h4>The interviews were then distilled into useful observations and insights that drove the development of our product. We tested our design with the panel of consumers frequently over the course of the work gaining valuable feedback and direction. I contributed mechanical design and industrial design direction to the project as well as physical prototyping and CAD modeling.</h4>
+                        <h4>The project is currently under NDA and therefore images are unavailable.</h4>
                     </div>
                 </div>  
             </div>
